fix layout bugs

--- a/desafio-sync360/src/styles/components/App.sass
+++ b/desafio-sync360/src/styles/components/App.sass
@@ -21,12 +21,18 @@
     text-align: center
     width: 35vw
     border-radius: 20px
-    padding: 2rem 0
-    min-height: 128vh
+    padding: 2rem 1rem
 
-h2:hover
+h2:hover, label:hover
     cursor: default
     background: variables.$gradient
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
+
+
+.biografia
+    width: 100%
+    text-align: left
+    margin-top: 2.5rem
+    margin-left: 5vw
     
