--- a/desafio-sync360/src/styles/components/ContainerForm.sass
+++ b/desafio-sync360/src/styles/components/ContainerForm.sass
@@ -1,24 +1,18 @@
 @use '../../variables'
-    
-form
-    display: grid
-    grid-template-columns: 12vw 20vw
-    align-items: center
-    justify-content: center
-    min-height: 87vh
-
-label, input, textarea
-    margin-top: 2rem
-
-label 
-    margin-right: 1rem
 
 input
-    height: 25px
+    margin-top: 2.5rem
+    height: 1.8rem
 
+textarea
+    height: 30vw
+    width: 30vw
+    margin-top: 0.5rem 
+    
 input[type='submit']
     cursor: pointer
-    width: 10rem
+    height: 4vh
+    width: 15vw
     background: variables.$gradient
     border: none
     border-radius: 5px
